[project]
name = "hyperliquid-telegram-bot"
version = "0.1.0"
description = "Telegram bot for Hyperliquid perpetual futures — monitoring, real-time alerts, Wyckoff/LLM technical analysis, and automated trading strategies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperliquid-python-sdk",
    "matplotlib>=3.9.2",
    "mplfinance>=0.12.10b0",
    "pandas-stubs>=2.2.3.241126",
    "pandas-ta-classic",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-mock>=3.12.0",
    "python-telegram-bot[job-queue]>=21.6",
    "setuptools>=75.5.0",
    "tabulate>=0.9.0",
    "types-requests>=2.32.0.20241016",
    "types-tabulate>=0.9.0.20240106",
    "tzlocal>=5.2",
    "scipy>=1.14.1",
    "dacite>=1.8.1",
    "numpy<2.0.0",
    "litellm>=1.77.5",
]

[tool.uv.sources]
hyperliquid-python-sdk = { git = "https://github.com/hyperliquid-dex/hyperliquid-python-sdk.git" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
    "ignore::telegram.warnings.PTBUserWarning"
]

[tool.mypy]
python_version = "3.10"
strict = true
explicit_package_bases = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "hyperliquid.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "pandas_ta_classic.*",
    "matplotlib.*",
    "mplfinance.*",
    "scipy.*",
    "tzlocal.*",
    "dacite.*"
]
ignore_missing_imports = true
